--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -66,6 +66,19 @@ input, select, textarea {
 	appearance: none;
 }
 
+/* Change Autofill color from form */
+input:-webkit-autofill,
+input:-webkit-autofill:hover,
+input:-webkit-autofill:focus,
+input:-webkit-autofill:active  {
+    -webkit-box-shadow: 0 0 0 50px #f62459 inset !important;
+}
+
+/*Change text in autofill textbox*/
+input:-webkit-autofill {
+    -webkit-text-fill-color: white !important;
+}
+
 /* Basic */
 
 	@-ms-viewport {
