Footer File Upload Update

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2161,10 +2161,17 @@ input:-webkit-autofill {
 		width: 100%;
 	}
 
-	#myFile {
+	input[type="file"] {
+    display: none;
+	}
+
+	.custom-file-upload {
+    border: 4px solid #ffffff;
+		border-radius: 20px;
+    display: inline-block;
+    padding: 10px 30px;
+    cursor: pointer;
 		color: #ffffff;
-		border: 2px;
-		border-radius: 1;
 	}
 
 	::placeholder { /* Chrome, Firefox, Opera, Safari 10.1+ */
